--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="swiggy_orange">#F06414</color>
+    <color name="orange">#F06414</color>
     <color name="grey">#8D8E91</color>
     <color name="light_grey">#f1f1f4</color>
     <color name="dark_grey">#6E6F74</color>
@@ -25,5 +25,6 @@
     <color name="light_blue_600">#FF039BE5</color>
     <color name="gray_400">#FFBDBDBD</color>
     <color name="gray_600">#FF757575</color>
+    <color name="pale_pink">#fedbdc</color>
 
 </resources>
