--- a/app/src/main/res/drawable/background_subtitle_indicator.xml
+++ b/app/src/main/res/drawable/background_subtitle_indicator.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/swiggy_orange"/>
+    <solid android:color="@color/orange"/>
     <corners android:radius="13dp"/>
 
 </shape>
