--- a/app/src/main/res/layout/fragment_category_group.xml
+++ b/app/src/main/res/layout/fragment_category_group.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:background="#fedbdc"
+        android:background="@color/pale_pink"
         android:padding="15dp"
         android:translationZ="100sp"
         android:visibility="gone">
@@ -43,7 +43,7 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#fedbdc">
+                android:background="@color/pale_pink">
 
                 <!--    Header  -->
                 <com.example.nearbylocator.view.HeaderView
@@ -56,7 +56,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#fedbdc">
+                android:background="@color/pale_pink">
 
                 <!--    Searchbar   -->
                 <com.example.nearbylocator.view.SearchBarView
@@ -70,7 +70,7 @@
                 android:id="@+id/ll_banner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#fedbdc"
+                android:background="@color/pale_pink"
                 android:gravity="center_horizontal"
                 android:padding="5dp">
 
