--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,7 +43,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#f1f1f4"
+                android:background="@color/light_grey"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="10sp">
