--- a/app/src/main/res/layout/fragment_choose_place.xml
+++ b/app/src/main/res/layout/fragment_choose_place.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:text="Back"
+        android:backgroundTint="@color/bg_violet"
+        android:textColor="@color/blackTextColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,6 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:text="Done"
+        android:backgroundTint="@color/bg_violet"
+        android:textColor="@color/blackTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
