--- a/app/src/main/res/layout/fragment_travel_planner.xml
+++ b/app/src/main/res/layout/fragment_travel_planner.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".fragments.TravelPlannerFragment">
@@ -14,9 +14,12 @@
 
     <!-- Search Bar for searching destinations -->
     <com.example.nearbylocator.view.SearchBarView
-        android:id="@+id/searchView"
+        android:id="@+id/search_bar_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
+        android:outlineAmbientShadowColor="@android:color/transparent"
+        android:outlineSpotShadowColor="@android:color/transparent" />
 
     <!-- Suggested Destinations Section -->
     <TextView
