--- a/app/src/main/res/layout/fragment_category_individual.xml
+++ b/app/src/main/res/layout/fragment_category_individual.xml
@@ -101,7 +101,9 @@
             android:id="@+id/search_bar_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@android:color/transparent"/>
+            android:backgroundTint="@android:color/transparent"
+            android:outlineAmbientShadowColor="@android:color/transparent"
+            android:outlineSpotShadowColor="@android:color/transparent" />
     </LinearLayout>
 
 </RelativeLayout>
