--- a/app/src/main/res/layout/card_choose_place_category.xml
+++ b/app/src/main/res/layout/card_choose_place_category.xml
@@ -21,7 +21,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="Category Name"
-        android:textColor="@android:color/black"
+        android:textColor="@color/blackTextColor"
         android:textSize="14sp"
         android:textStyle="bold" />
 
