--- a/app/src/main/res/layout/layout_header_choose_place_category.xml
+++ b/app/src/main/res/layout/layout_header_choose_place_category.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:textSize="18sp"
     android:textStyle="bold"
-    android:textColor="@android:color/black"
+    android:textColor="@color/blackTextColor"
     android:layout_marginTop="16dp"
     android:layout_marginBottom="8dp"
     android:layout_marginStart="16dp"
