--- a/app/src/main/res/layout/view_quick_discover_category.xml
+++ b/app/src/main/res/layout/view_quick_discover_category.xml
@@ -10,6 +10,7 @@
         android:id="@+id/discover_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/swiggy_font_extrabold"
         android:letterSpacing="0.1"
         android:text="What you want to discover"
